# Ask-docs

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: chroma_utils.py  db_utils.py  langchain_utils.py  main.py  pydantic_models.py  rag_app.db  test.py
api/chroma_db/: chroma.sqlite3
app/: api_utils.py  chat_interface.py  sidebar.py  streamlit_app.py
